# 8BitCPU

./: .gitignore  ClockModule.fzz  README.md  generate_cpu_microcode.py  istructionDecoderMicrowords.rom  myrun.txt
Assembler/: Assembler.cpp  Assembler.h  Assembler2.cpp  AssemblerTest.cpp  Helpers.cpp  Helpers.h  Instructions.cpp  Instructions.h  Makefile  example.asm  exampleAll.asm  main.cpp
Assembler/ObjDump/: Makefile  ObjDump.cpp  ObjDump.h  main.cpp
Digital/: FullAdder.dig  HalfAdder.dig
Emulator/: ALU.h  ALU.hpp  Clock.cpp  Clock.h  CounterRegister.hpp  DFlipFlop.cpp  DFlipFlop.h  DLatch.cpp  DLatch.h  DataBus.hpp  EightBitAdder.h  Emulator.cpp  EmulatorTest.cpp  FullAdder.cpp  FullAdder.h  InstructionDecoder.h  InstructionDecoder.hpp  LogicGate.cpp  LogicGate.h  Makefile  OneBitRegister.cpp  OneBitRegister.h  ProgramLoader.h  ProgramLoader.hpp  ProgramROM.h  RAM.h  RAM.hpp  ROM.hpp  Register.hpp  Test.cpp  test.cpp
Emulator/Old/: Circuit.h  DFlipFlop.cpp  EightBitAdder.cpp  EightBitData.h  HalfAdder.cpp  HalfAdder.h  OneBitRegister.cpp  OneBitRegister.h
KiCad/DoubleRow6SlotBackplane/: DoubleRow6SlotBackplane.kicad_pcb  DoubleRow6SlotBackplane.kicad_prl  DoubleRow6SlotBackplane.kicad_pro  DoubleRow6SlotBackplane.kicad_sch
KiCad/DoubleRowBackplane/: DoubleRow4SlotBackplane.kicad_pcb  DoubleRow4SlotBackplane.kicad_prl  DoubleRow4SlotBackplane.kicad_pro  DoubleRow4SlotBackplane.kicad_sch  DoubleRowBackplane.kicad_pcb  DoubleRowBackplane.kicad_prl  DoubleRowBackplane.kicad_sch
KiCad/DoubleRowBackplane/gerber/: DoubleRow4SlotBackplane-B_Cu.gbl  DoubleRow4SlotBackplane-B_Mask.gbs  DoubleRow4SlotBackplane-B_Paste.gbp  DoubleRow4SlotBackplane-B_Silkscreen.gbo  DoubleRow4SlotBackplane-Edge_Cuts.gm1  DoubleRow4SlotBackplane-F_Cu.gtl  DoubleRow4SlotBackplane-F_Mask.gts  DoubleRow4SlotBackplane-F_Paste.gtp  DoubleRow4SlotBackplane-F_Silkscreen.gto  DoubleRow4SlotBackplane-NPTH-drl_map.gbr  DoubleRow4SlotBackplane-NPTH.drl  DoubleRow4SlotBackplane-PTH-drl_map.gbr  DoubleRow4SlotBackplane-PTH.drl
KiCad/PrototypeSlotBoard/: PrototypeSlotBoard.kicad_pcb  PrototypeSlotBoard.kicad_prl  PrototypeSlotBoard.kicad_pro  PrototypeSlotBoard.kicad_sch
Logism/: 8BitCPU.circ  HalfAdder.circ
PcbLayouts/: ClockModule.diy
Tools/: CMakeLists.txt
Tools/Assembler/: Assembler.cpp  Assembler.h  example.asm  main.cpp
Tools/Assembler/test/: AssemblerTest.cpp
Tools/Common/: Helpers.h  Instructions.cpp  Instructions.h
Tools/ObjDump/: ObjDump.cpp  main.cpp
Tools/ObjDump/test/: ObjDumpTest.cpp
